--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "ng7-pre": {
@@ -123,6 +123,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "ng7-pre"
+    }
+  },
+  "defaultProject": "ng7-pre",
+  "cli": {
+    "analytics": "0acfafa2-a2b2-454a-8e9e-4a8bcaeca889"
+  }
 }
